# xz-rs

./: .gitmodules  Cargo.toml  LICENSE  readme.md  test_version.rs
.github/: copilot-instructions.md
.github/templates/: coverage-index.html  site-index.html
.github/workflows/: rust.yml
gzip-utils/: Cargo.toml
gzip-utils/src/: config.rs  error.rs  io.rs  lib.rs  operations.rs  process.rs  tests.rs
lzma-safe/: Cargo.toml  README.md
lzma-safe/liblzma-sys/: Cargo.toml  README.md  build.rs  lzma.h
lzma-safe/liblzma-sys/patches/: example.patch.disabled
lzma-safe/liblzma-sys/scripts/: check-builds.sh  generate-bindings.sh  update-vendored.sh
lzma-safe/liblzma-sys/src/: lib.rs  lzma_bindings.rs
lzma-safe/src/: error.rs  ffi.rs  lib.rs
lzma-safe/src/decoder/: file_info.rs  index.rs  mod.rs  raw.rs  tests.rs
lzma-safe/src/decoder/options/: flags.rs  mod.rs
lzma-safe/src/encoder/: alone.rs  mod.rs  raw.rs  tests.rs
lzma-safe/src/encoder/options/: check.rs  filter.rs  lzma1.rs  mod.rs  present.rs
lzma-safe/src/stream/: allocator.rs  index.rs  mod.rs  tests.rs
xz-cli/: Cargo.toml  config.rs  error.rs  io.rs  lib.rs  lzma1.rs  memlimit.rs  operations.rs  process.rs  tests.rs
xz-cli/benches/: cli_vs_upstream.rs
xz-cli/benches/common/: datasets.rs  fixtures.rs  mod.rs  targets.rs
xz-cli/format/: list.rs  mod.rs
xz-cli/io/: mod.rs  sparse_writer.rs  tests.rs
xz-cli/src/: lib.rs
xz-cli/tests/test_cli/: main.rs
xz-cli/tests/test_cli/common/: data.rs  mod.rs  upstream.rs  vectors.rs
xz-cli/tests/test_cli/lzcat/: basic.rs  cli_options.rs  edge_cases.rs  mod.rs
xz-cli/tests/test_cli/lzma/: basic.rs  cli_options.rs  interop.rs  mod.rs  vectors.rs
xz-cli/tests/test_cli/unlzma/: basic.rs  cli_options.rs  edge_cases.rs  interop.rs  mod.rs
xz-cli/tests/test_cli/unxz/: basic.rs  cli_options.rs  edge_cases.rs  formats.rs  interop.rs  mod.rs
xz-cli/tests/test_cli/vectors/: README.md
xz-cli/tests/test_cli/xz/: basic.rs  cli_options.rs  edge_cases.rs  formats.rs  interop.rs  mod.rs  vectors.rs
xz-cli/tests/test_cli/xzcat/: basic.rs  cli_options.rs  edge_cases.rs  interop.rs
xz-cli/tests/test_cli/xzcmp/: basic.rs  cli_options.rs  edge_cases.rs  interop.rs
xz-cli/tests/test_cli/xzdec/: basic.rs  cli_options.rs  edge_cases.rs  interop.rs
xz-cli/tests/test_cli/xzdiff/: basic.rs  cli_options.rs  edge_cases.rs  interop.rs  mod.rs
xz-cli/tests/test_cli/xzgrep/: basic.rs  cli_options.rs  edge_cases.rs  interop.rs
xz-cli/tests/test_cli/xzless/: basic.rs  cli_options.rs  edge_cases.rs
xz-cli/tests/test_cli/xzmore/: basic.rs  cli_options.rs  edge_cases.rs
xz-cli/utils/: argfiles.rs  bytes.rs  math.rs  mod.rs
xz-core/: Cargo.toml  README.md
xz-core/src/: config.rs  error.rs  file_info.rs  header.rs  lib.rs  options.rs  threading.rs  util.rs
xz-core/src/buffer/: allocator.rs  deallocator.rs  mod.rs  raw.rs  tests.rs
xz-core/src/compression/: mod.rs  options.rs
xz-core/src/decompression/: mod.rs  options.rs
xz-core/src/pipeline/: async.rs  decode.rs  mod.rs  sync.rs
xz-utils/: Cargo.toml
xz-utils/src/: config.rs  error.rs  io.rs  lib.rs  operations.rs  process.rs  tests.rs
