[workspace]
resolver = "2"
members = ["gzip-utils", "xz-utils"]

[workspace.package]
version = "0.2.0"  # Bump version for new architecture
edition = "2021"
authors = ["Dmitry Semak <dmitry.semak@gmail.com>"]
license = "MIT"
repository = "https://github.com/dsemak/xz-rs"
homepage = "https://github.com/dsemak/xz-rs"
description = "Modern Rust compression utilities: gzip and XZ/LZMA implementations"

# Common dependencies for all crates
[workspace.dependencies]
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }

# Compression library dependencies
[workspace.dependencies.flate2]
version = "1.0"
features = ["zlib"]

[workspace.dependencies.lzma-rs]
version = "0.3.0"

