[package]
name = "lzma-safe"
version = "0.1.1+xz.5.8.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Safe, idiomatic Rust wrapper for liblzma (XZ/LZMA compression)"
repository.workspace = true
keywords = ["compression", "lzma", "safe", "xz"]
categories = ["api-bindings", "compression"]

[dependencies]
bitflags = "2.0.0"
liblzma-sys = { path = "liblzma-sys", version = "0.1.1" }
libc = "0.2"
