[package]
name = "xz-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Streaming compression/decompression pipeline for XZ format"
repository.workspace = true
homepage.workspace = true
keywords = ["compression", "lzma", "lzma2", "streaming", "xz"]
categories = ["api-bindings", "compression"]

[features]
default = ["async"]
async = ["dep:tokio"]

[dependencies]
lzma-safe = { path = "../lzma-safe" }
tokio = { workspace = true, optional = true }

[dev-dependencies]

[package.metadata.docs.rs]
features = []
