[package]
name = "xz-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure-Rust XZ/LZMA compression utilities"
repository.workspace = true
homepage.workspace = true
keywords = ["xz", "lzma", "compression", "unxz", "xzcat"]
categories = ["command-line-utilities", "compression"]

[[bin]]
name = "xz"
path = "bin/xz/main.rs"

[[bin]]
name = "unxz"
path = "bin/unxz/main.rs"

[[bin]]
name = "xzcat"
path = "bin/xzcat/main.rs"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
lzma-rs = { workspace = true }

# clap
clap = { version = "4.0", features = ["derive", "env"], optional = true }

[features]
default = []
cli = ["dep:clap"]
